--- a/index.html
+++ b/index.html
@@ -38,15 +38,18 @@
 			a:visited {
 				color: #a64;
 			}
+			a:hover {
+				color: #ea8;
+			}
 			
 			#projects {
 				float: left;
 				width: 32em;
 				height: 60%;
 				margin: 0.2em 1em;
-				border: 0.1em solid brown;
+				border: 0.1em solid #a64;
 				color: #ddd;
-				background-color: black;
+				background-color: rgba(0, 0, 0, 0.8);
 				overflow-x: hidden;
 				overflow-y: auto;
 			}
@@ -56,7 +59,7 @@
 			}
 			#projects li {
 				padding-top: 1em;
-				border-bottom: 0.1em dashed brown;
+				border-bottom: 0.1em dashed #a64;
 				list-style-type: none;
 			}
 			
