Switch to using DOCTYPE html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 	<head>
 		<title>Raumkraut.net</title>
 		<link rel="icon" type="image/png" href="img/rk-32.png" />
 		<style type="text/css">
 			html, body {
-				margin: 0em;
-				padding: 0em;
+				height: 100%;
+				margin: 0rem;
+				border: 0rem;
+				padding: 0rem;
 			}
 			body {
 				font-family: sans-serif;
@@ -19,17 +21,18 @@
 			}
 			
 			h1 {
-				margin: 0.2em;
-				font-size: 2em;
+				margin: 0rem;
+				padding: 0.2rem 0.4rem;
+				font-size: 2rem;
 			}
 			h2 {
-				margin: 0em;
-				padding: 0em;
-				font-size: 1.5em;
+				margin: 0rem;
+				padding: 0rem;
+				font-size: 1.4rem;
 			}
 			h3 {
-				margin: 0em;
-				font-size: 1em;
+				margin: 0rem;
+				font-size: 1rem;
 			}
 			
 			a {
@@ -43,31 +46,30 @@
 			}
 			
 			#projects {
-				float: left;
-				width: 32em;
+				width: 32rem;
 				height: 60%;
-				margin: 0.2em 1em;
-				border: 0.1em solid #a64;
+				margin: 0.2rem 1rem;
+				border: 0.1rem solid #a64;
 				color: #ddd;
 				background-color: rgba(0, 0, 0, 0.8);
 				overflow-x: hidden;
 				overflow-y: auto;
 			}
 			#projects ul {
-				margin: 0em;
-				padding: 0em 1em;
+				margin: 0rem;
+				padding: 0rem 1rem;
 			}
 			#projects li {
-				padding-top: 1em;
-				border-bottom: 0.1em dashed #a64;
+				padding-top: 1rem;
+				border-bottom: 0.1rem dashed #a64;
 				list-style-type: none;
 			}
 			
 			.thumb {
 				float: left;
-				width: 6em;
-				height: 4em;
-				margin: 0em 0.5em 0.1em 0em;
+				width: 6rem;
+				height: 4rem;
+				margin: 0rem 0.5rem 0.1rem 0rem;
 			}
 		</style>
 	</head>
@@ -81,7 +83,7 @@
 					<p>Yes, I finally gave in and started a blog. Don't go holding your breath for reams of insightful commentary.</p>
 				</li>
 				<li>
-					<img class="thumb" src="img/f00baron-thumb.svg" />
+					<img class="thumb" src="img/f00baron-thumb.svg" alt="" />
 					<h2>#F00 Baron</h2>
 					<h3><a href="http://f00baron.bitbucket.org/">http://f00baron.bitbucket.org/</a></h3>
 					<p>The Red Baron takes to the skies once again, to take down his arch nemesis, the Yellow Baron!</p>
