--- a/index.xhtml
+++ b/index.xhtml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Raumkraut.net</title>
 		<link rel="icon" type="image/png" href="img/rk-32.png" />
