Add OpenID header links

--- a/index.xhtml
+++ b/index.xhtml
@@ -1,9 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Raumkraut.net</title>
 		<link rel="icon" type="image/png" href="img/rk-32.png" />
+		
+		<link rel="openid.server" href="http://www.clavid.com/provider/openid" />
+		<link rel="openid.delegate" href="http://raumkraut.clavid.com" />
+		<link rel="openid2.provider" href="http://www.clavid.com/provider/openid" />
+		<link rel="openid2.local_id" href="http://raumkraut.clavid.com" />
+		
 		<style type="text/css">
 			html, body {
 				height: 100%;
