--- a/index.xhtml
+++ b/index.xhtml
@@ -92,9 +92,10 @@
 				<li>
 					<img class="thumb" src="img/f00baron-thumb.svg" alt="" />
 					<h2>#F00 Baron</h2>
-					<h3><a href="http://f00baron.bitbucket.org/">http://f00baron.bitbucket.org/</a></h3>
-					<p>The Red Baron takes to the skies once again, to take down his arch nemesis, the Yellow Baron!</p>
+					<h3><a href="http://raumkraut.net/f00baron/">http://raumkraut.net/f00baron/</a></h3>
+					<p>The Red Baron takes to the skies once again, to take down his arch nemesis: The Yellow Baron!</p>
 					<p>A two-player action game of SVG aerial combat, in the tradition of Biplane Duel.</p>
+					<p>Hack the source at its <a href="https://github.com/raumkraut/f00baron/">GitHub project</a>.</p>
 				</li>
 			</ul>
 		</div>
