Replace blog entry with #F00 Baron 2
The blog was stillborn anyway.

--- a/index.xhtml
+++ b/index.xhtml
@@ -85,9 +85,11 @@
 		<div id="projects">
 			<ul>
 				<li>
-					<h2>Blog: Note to Self</h2>
-					<h3><a href="http://raumkraut.wordpress.com/">http://raumkraut.wordpress.com/</a></h3>
-					<p>Yes, I finally gave in and started a blog. Don't go holding your breath for reams of insightful commentary.</p>
+					<img class="thumb" src="img/f00baron2-thumb.png" alt="" />
+					<h2>#F00 Baron 2 - Symmetric Boogaloo</h2>
+					<h3><a href="https://github.com/raumkraut/f00baron2/releases">https://github.com/raumkraut/f00baron2/releases</a></h3>
+					<p>After having soundly defeated the Yellow Baron in honourable aerial combat, the Red Baron finds that a new challenger has taken wing - The Mauve Baron!</p>
+					<p>If you've played #F00 Baron, you might find this familiar. This time, however, it's written using <a href="https://godotengine.org">Godot</a>.</p>
 				</li>
 				<li>
 					<img class="thumb" src="img/f00baron-thumb.svg" alt="" />
