Tweak styling of the projects list

--- a/index.xhtml
+++ b/index.xhtml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Raumkraut.net</title>
@@ -54,22 +54,16 @@
 			
 			#projects {
 				width: 32rem;
-				height: 60%;
-				margin: 0.2rem 1rem;
-				border: 0.1rem solid #a64;
-				color: #ddd;
-				background-color: rgba(0, 0, 0, 0.8);
-				overflow-x: hidden;
-				overflow-y: auto;
-			}
-			#projects ul {
 				margin: 0rem;
 				padding: 0rem 1rem;
 			}
 			#projects li {
-				padding-top: 1rem;
-				border-bottom: 0.1rem dashed #a64;
+				margin: 0.5rem;
+				border: 0.1rem solid #a64;
+				padding: 1rem;
 				list-style-type: none;
+				color: #ddd;
+				background-color: rgba(0, 0, 0, 0.7);
 			}
 			
 			.thumb {
@@ -82,24 +76,22 @@
 	</head>
 	<body>
 		<h1>Raumkraut.net</h1>
-		<div id="projects">
-			<ul>
-				<li>
-					<img class="thumb" src="img/f00baron2-thumb.png" alt="" />
-					<h2>#F00 Baron 2 - Symmetric Boogaloo</h2>
-					<h3><a href="https://github.com/raumkraut/f00baron2/releases">https://github.com/raumkraut/f00baron2/releases</a></h3>
-					<p>After having soundly defeated the Yellow Baron in honourable aerial combat, the Red Baron finds that a new challenger has taken wing - The Mauve Baron!</p>
-					<p>If you've played #F00 Baron, you might find this familiar. This time, however, it's written using <a href="https://godotengine.org">Godot</a>.</p>
-				</li>
-				<li>
-					<img class="thumb" src="img/f00baron-thumb.svg" alt="" />
-					<h2>#F00 Baron</h2>
-					<h3><a href="http://raumkraut.net/f00baron/">http://raumkraut.net/f00baron/</a></h3>
-					<p>The Red Baron takes to the skies once again, to take down his arch nemesis: The Yellow Baron!</p>
-					<p>A two-player action game of SVG aerial combat, in the tradition of Biplane Duel.</p>
-					<p>Hack the source at its <a href="https://github.com/raumkraut/f00baron/">GitHub project</a>.</p>
-				</li>
-			</ul>
-		</div>
+		<ul id="projects">
+			<li>
+				<img class="thumb" src="img/f00baron2-thumb.png" alt="" />
+				<h2>#F00 Baron 2 - Symmetric&nbsp;Boogaloo</h2>
+				<h3><a href="https://github.com/raumkraut/f00baron2/releases">https://github.com/raumkraut/f00baron2/releases</a></h3>
+				<p>After having soundly defeated the Yellow Baron in honourable aerial combat, the Red Baron finds that a new challenger has taken wing - The Mauve Baron!</p>
+				<p>If you've played #F00 Baron, you might find this familiar. This time, however, the game is written using <a href="https://godotengine.org">the Godot game engine</a>.</p>
+			</li>
+			<li>
+				<img class="thumb" src="img/f00baron-thumb.svg" alt="" />
+				<h2>#F00 Baron</h2>
+				<h3><a href="http://raumkraut.net/f00baron/">http://raumkraut.net/f00baron/</a></h3>
+				<p>The Red Baron takes to the skies once again, to take down his arch nemesis: The Yellow Baron!</p>
+				<p>A two-player action game of SVG aerial combat, in the tradition of Biplane Duel.</p>
+				<p>Hack the source at its <a href="https://github.com/raumkraut/f00baron/">GitHub project</a>.</p>
+			</li>
+		</ul>
 	</body>
 </html>
