--- a/index.xhtml
+++ b/index.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Raumkraut.net</title>
-		<link rel="icon" type="image/png" href="img/rk-32.png" />
+		<link rel="icon" type="image/png" href="img/onion-64.png" />
 		
 		<link rel="openid.server" href="http://www.clavid.com/provider/openid" />
 		<link rel="openid.delegate" href="http://raumkraut.clavid.com" />
