Replace non-URL instances of raumkraut => romlok

--- a/index.xhtml
+++ b/index.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<title>Raumkraut.net</title>
+		<title>Romlok.net</title>
 		<link rel="icon" type="image/png" href="img/onion-64.png" />
 		
 		<link rel="openid.server" href="http://www.clavid.com/provider/openid" />
@@ -75,7 +75,7 @@
 		</style>
 	</head>
 	<body>
-		<h1>Raumkraut.net</h1>
+		<h1>Romlok.net</h1>
 		<ul id="projects">
 			<li>
 				<img class="thumb" src="img/f00baron2-thumb.png" alt="" />
