Replace instances of raumkraut.net

--- a/index.xhtml
+++ b/index.xhtml
@@ -82,7 +82,7 @@
 			<li>
 				<img class="thumb" src="img/f00baron-thumb.svg" alt="" />
 				<h2>#F00 Baron</h2>
-				<h3><a href="http://raumkraut.net/f00baron/">http://raumkraut.net/f00baron/</a></h3>
+				<h3><a href="http://romlok.net/f00baron/">http://romlok.net/f00baron/</a></h3>
 				<p>The Red Baron takes to the skies once again, to take down his arch nemesis: The Yellow Baron!</p>
 				<p>A two-player action game of SVG aerial combat, in the tradition of Biplane Duel.</p>
 				<p>Hack the source at its <a href="https://github.com/raumkraut/f00baron/">GitHub project</a>.</p>
