--- a/index.xhtml
+++ b/index.xhtml
@@ -75,7 +75,7 @@
 			<li>
 				<img class="thumb" src="img/f00baron2-thumb.png" alt="" />
 				<h2>#F00 Baron 2 - Symmetric&nbsp;Boogaloo</h2>
-				<h3><a href="https://github.com/raumkraut/f00baron2/releases">https://github.com/raumkraut/f00baron2/releases</a></h3>
+				<h3><a href="https://github.com/romlok/f00baron2/releases">https://github.com/romlok/f00baron2/releases</a></h3>
 				<p>After having soundly defeated the Yellow Baron in honourable aerial combat, the Red Baron finds that a new challenger has taken wing - The Mauve Baron!</p>
 				<p>If you've played #F00 Baron, you might find this familiar. This time, however, the game is written using <a href="https://godotengine.org">the Godot game engine</a>.</p>
 			</li>
@@ -85,7 +85,7 @@
 				<h3><a href="http://romlok.net/f00baron/">http://romlok.net/f00baron/</a></h3>
 				<p>The Red Baron takes to the skies once again, to take down his arch nemesis: The Yellow Baron!</p>
 				<p>A two-player action game of SVG aerial combat, in the tradition of Biplane Duel.</p>
-				<p>Hack the source at its <a href="https://github.com/raumkraut/f00baron/">GitHub project</a>.</p>
+				<p>Hack the source at its <a href="https://github.com/romlok/f00baron/">GitHub project</a>.</p>
 			</li>
 		</ul>
 	</body>
